# bootstrap

./: .envrc  AGENTS.md  AGENTS_STRUCTURE.md  AGENTS_TEMPLATE.md  README.md  bootstrap.py  pyproject.toml
agent_scripts/: update_agents.py
