[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bootstrap"
version = "0.1.0"
description = "Bootstrap agent templates into a target repo."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Marko Rosenmüller" }]
keywords = ["agents", "bootstrap", "templates"]
dependencies = [
]

[project.scripts]
bootstrap = "bootstrap:main"

[tool.setuptools]
package-dir = {"" = "."}
py-modules = ["bootstrap"]

[tool.setuptools.packages.find]
include = []
exclude = ["tests*", "docs*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]
